syntax = "proto3";

option java_package = "com.exonum.binding.cryptocurrency.transactions";
option java_outer_classname = "TxMessageProtos";

message TransferTx {
  int64 seed = 1;
  bytes toWallet = 2;
  int64 sum = 3;
}

message CreateWalletTx {
  int64 initialBalance = 1;
  int64 pendingBalance = 2;
  bytes signer = 3;
}

message SignMultisignTransferTx {
  int64 seed = 1;
  bytes txHash = 2;
}

message HistoryEntity {
  int64 seed = 1;
  bytes walletFrom = 2;
  bytes walletTo = 3;
  int64 sum = 4;
  bytes txMessageHash = 5;
}
